syntax = "proto3";

option go_package = "sigmaos/socialnetwork/proto";

service TextService {
	rpc ProcessText(ProcessTextRequest) returns (ProcessTextResponse);
}

service UrlService {
	rpc ComposeUrls(ComposeUrlsRequest) returns (ComposeUrlsResponse);
	rpc GetUrls(GetUrlsRequest) returns (GetUrlsResponse);
}

message ComposeUrlsRequest {
	repeated string extendedurls = 1;
}

message ComposeUrlsResponse {
	string       ok = 1;
	repeated Url urls = 2;
}

message GetUrlsRequest {
	repeated string shorturls = 1;
}

message GetUrlsResponse {
	string          ok = 1;
	repeated string extendedurls = 2;
}

message ProcessTextRequest {
	string text = 1;
}

message ProcessTextResponse {
	string           ok = 1;
	string           text = 2;
	repeated UserRef usermentions = 3;
	repeated Url     urls = 4; 
}

message UserRef {
	int64  userid = 1;
	string username = 2; 
}

message MediaRef {
	int64  mediaid = 1;
	string mediatype = 2;
}

message Url {
	string shorturl = 1;
	string extendedurl = 2;
}


